# countriesQL

./: README.md  notebook.ipynb  pyproject.toml
